# jp-stats-elt

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: jp_stats_elt_dag.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/staging/: _estat__sources.yml  stg_cpi_raw.sql
docs/: architecture.md  project-status.md
scripts/: extract_estat.py  init-warehouse.sql
tests/: test_dag_integrity.py  test_extract_estat.py
